# MotorSense

./: .gitignore  README.md  pyproject.toml  requirements.txt
emg_pretraining/: __init__.py  config_utils.py  data.py  local_batch_launch.py  models.py  optim_factory.py  submitit_launch.py  train.py  utils.py  video_transforms.py  visualize_diagnostic_sample.py  visualize_raw_emg_imu_span.py  vqvae_emg.py  vqvae_utils.py
emg_pretraining/configs/: default.yaml
scripts/: run_sbatch_batch4.sh
